# apex-pulse

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: data.yaml  features.yaml  model.yaml
src/f1_prediction/: __init__.py  cli.py  config.py
src/f1_prediction/data/: __init__.py  cache.py  fastf1_loader.py  identity.py  ingest.py  schema.py  season_builder.py
src/f1_prediction/features/: __init__.py  build.py  data_quality.py  historical_features.py  lap_cleaning.py  modeling_dataset.py  push_laps.py  qualifying_targets.py  relative_features.py  session_aggregates.py
tests/: test_ablation.py  test_artifact_lineage.py  test_backtest_report.py  test_baseline_evaluation.py  test_baselines.py  test_boosted_backtest.py  test_champion_diagnostics.py  test_champion_policy.py  test_cli.py  test_config.py  test_data_quality.py  test_dataset_report.py  test_diagnostics.py  test_documentation_tracking.py  test_feature_build.py  test_feature_groups.py  test_historical_features.py  test_identity.py  test_ingest.py  test_lap_features.py  test_modeling_build.py  test_modeling_dataset.py  test_paths.py  test_policy_simulation.py  test_portfolio_report.py  test_prospective_policy_evaluation.py  test_prospective_replay.py  test_prospective_replay_eligibility_audit.py  test_relative_features.py  test_repeated_backtest.py  test_schema.py  test_season_aware_candidate_audit.py  test_season_aware_policy_forensics.py  test_season_aware_rebuild.py  test_season_aware_validation.py  test_season_builder.py  test_splits.py  test_tabular.py  test_temporal_weighting.py
(+31 files in other folders)
