[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-prediction"
version = "0.1.0"
description = "Foundation for Formula 1 qualifying performance prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.4,<4",
    "pandas>=2.1,<3",
    "pyarrow>=14,<22",
    "PyYAML>=6,<7",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8,<1",
]

[project.scripts]
f1-prediction = "f1_prediction.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
